Version 1.116 (???)
- replace Pointer by CGAL_COMPARABLE_ITERATOR_CHECKER( *) for 
Vertex_handle and Cell_handle in TDS

Version 1.115 (29 May 02)
- Replace max2 by maxless.
- DS_Container removed from this package. Goes to Triangulation_2.

-----------------------  CGAL 2.4 ------------------------

Version 1.114 (15 May 02)
- bug fix in the doc of the Delaunay traits concept
- use of Lazy_exact_nt in demo_voronoi

Version 1.113 (7 May 02)
- bug fix in deprecated version of incident_vertices()

Version 1.112 (12 April 02)
- Split insert_conflict() in insert_conflict_2() and insert_conflict_3().

Version 1.111 (12 April 02)
- Fix link problem in DS_Container.
- Remove include dependency order in Regular_euclidian_traits_3.h.

Version 1.110 (10 April 02)
- method Triangulation_3<GT,Tds>::triangle returns a triangle oriented 
towards the outside of the cell c for facet (c,i)

Version 1.109 (9 April 02)
- SunPro can't eat the automatic conversion iterator -> handle in some cases,
  so fix example_color.C.

Version 1.108 (22 March 02)
- Iterators and circulators are convertible to handles.
- Cell.init() obsolete (redundant with default constructor)

Version 1.107 (8 March 02)
- patch in DS_Container for MSVC

Version 1.106 (1 March 02)
- Updates for DS_Container.

Version 1.105 (18 February 02)
- Shorten DS_Container::Free_elt so that TDS_2 can use it.
- Add a copy of DS_Container that preserves the iterator order.
- New insert(Point, Locate_type, Cell_handle, int, int).

Version 1.104 (5 February 02)
- Various internal cleanups.

Version 1.103 (25 January 02)
- Update wrt recent changes in the kernel and TDS_2.

Version 1.102 (22 January 02)
- Doc : update Tds_3 => TriangulationDataStructure_3.
- Use STL_extension's Triple and Quadruple.

Version 1.101 (14 January 02)
- Documentation updates.
- remove_from_simplex() renamed to remove_from_maximal_dimension_simplex().
- star_hole() renamed to insert_in_hole().
- Use STL_extensions' Filter_iterator<> instead of