@@ -1,38 +1,0 @@
-// ============================================================================
-//
-// Copyright (c) 1999 The CGAL Consortium
-//
-// This software and related documentation is part of an INTERNAL release
-// of the Computational Geometry Algorithms Library (CGAL). It is not
-// intended for general use.
-//
-// ----------------------------------------------------------------------------
-//
-// release       :
-// release_date  :
-//
-// file          : src/Triangulation_3.C
-// revision      : $Revision$
-// author(s)     : Monique Teillaud <Monique.Teillaud@sophia.inria.fr>
-//
-// coordinator   : INRIA Sophia Antipolis 
-//                 (Mariette Yvinec <Mariette.Yvinec@sophia.inria.fr>)
-//
-// ============================================================================
-
-#include <CGAL/basic.h>
-#include <CGAL/Triangulation_utils_3.h>
-
-CGAL_BEGIN_NAMESPACE
-
-const char Triangulation_utils_3::tab_next_around_edge[4][4] = {
-      {5, 2, 3, 1},
-      {3, 5, 0, 2},
-      {1, 3, 5, 0},
-      {2, 0, 1, 5} };
-
-unsigned int Triangulation_utils_3::random_value = 0;
-unsigned int Triangulation_utils_3::count = 0;
-unsigned int Triangulation_utils_3::val;
-
-CGAL_END_NAMESPACE
